--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "faker": "^5.5.3",
+    "firebase": "^9.6.2",
+    "install": "^0.13.0",
     "next": "latest",
+    "next-auth": "^4.0.6",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwind-scrollbar": "^1.3.1",
