--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_CLIENT_ID=1002448262107-h80p3jvmqk42uvmvebipr7gkcov9lfig.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRECT=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
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://instagram-enzqbxawo-sergiomaurysterling.vercel.app/
