next auth url again bby

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_CLIENT_ID=1002448262107-h80p3jvmqk42uvmvebipr7gkcov9lfig.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRECT=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
-NEXTAUTH_URL=https://instasams.vercel.app/auth/signin
+NEXTAUTH_URL=https://instasams.vercel.app
