--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "faker": "^5.5.3",
     "firebase": "^9.6.2",
     "install": "^0.13.0",
+    "logrocket": "^2.1.3",
     "next": "latest",
     "next-auth": "^4.0.6",
     "npm": "^8.3.0",
