--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "install": "^0.13.0",
     "logrocket": "^2.1.3",
     "next": "latest",
-    "next-auth": "^4.0.6",
+    "next-auth": "4.0.0-beta.4",
     "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
