--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@next-auth/prisma-adapter": "^1.0.1",
+    "@prisma/client": "^3.7.0",
     "@tailwindcss/forms": "^0.4.0",
     "faker": "^5.5.3",
     "firebase": "^9.6.2",
     "install": "^0.13.0",
     "logrocket": "^2.1.3",
     "next": "latest",
-    "next-auth": "4.0.0-beta.4",
+    "next-auth": "^4.0.6",
+    "nodemailer": "^6.7.2",
     "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
+    "prisma": "^3.7.0",
     "tailwindcss": "^3.0.0"
   }
 }
